--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,6 +1,6 @@
 {
     "tabWidth": 4,
-    "singleQuote": false,
+    "singleQuote": true,
     "jsxSingleQuote": true,
     "semi": true,
     "printWidth": 130,
